--- a/main.css
+++ b/main.css
@@ -7,7 +7,8 @@ main.css
 
 body{
 	 overflow-x: hidden;
-	 background: url("bgweb3.png") no-repeat right bottom fixed;
+	 background: url("bgweb3.png") ;
+	 background-repeat:no-repeat;
 	 background-size: 100%;
 	 -ms-transform: scale(0.8);
 	 -moz-transform: scale(0.95);
