--- a/main.css
+++ b/main.css
@@ -68,7 +68,7 @@ h2{
 
 #buttonlist{
 	margin-left: -20%;
-	margin-top:-30%;
+	margin-top: -90%;
 	
 }
 @media only screen and (min-width: 2000px) {
@@ -77,12 +77,17 @@ h2{
 		margin-left:15%;
 	margin-bottom:5%;
 	}
+	#buttonlist{
+	margin-left: -20%;
+	margin-top: -40%;
+	
+}
 }
 .actual{
 	text-transform: uppercase;
 	position:relative;
 	margin-left:15%;
-	margin-bottom:10%;
+	margin-bottom:16%;
 	font-size: 110%;
 	font-weight:bold;
 	font-family: helvetica;
