--- a/main.css
+++ b/main.css
@@ -31,10 +31,9 @@ body{
 }
 #aboutinfo li{
 	list-style:none;
+	margin-left:-5%;
 }
-#aboutinfo ul{
-	horizontal-align:left;
-}
+
 h2,p,h3,a{
 	color:#66e0ff;
 }
