--- a/main.css
+++ b/main.css
@@ -31,7 +31,14 @@ body{
 }
 #aboutinfo li{
 	list-style:none;
-	margin-left:-3%;
+	margin:0%;
+	padding:0%;
+	
+}
+#aboutinfo ul{
+	margin:0%;
+	padding:0%;
+	
 }
 
 h2,p,h3,a{
