--- a/main.css
+++ b/main.css
@@ -182,8 +182,9 @@ h2{
 }
 #projectinfo >ul >li >button{
 	font-size: 2vh;
-	border-radius:3vh;
+	border-radius:2vh;
 	color:#66e0ff;
 	border:#66e0ff;
 	outline:none;
+	horizontal-align:right;
 }
