--- a/main.css
+++ b/main.css
@@ -185,8 +185,8 @@ h2{
 	font-size: 2vh;
 	border-radius:2vh;
 	background:#66e0ff;
-	color:black;
+	color;#000000
 	border:#66e0ff;
 	outline:none;
-	vertical-align:left;
+	horizontal-align:right;
 }
