--- a/main.css
+++ b/main.css
@@ -185,7 +185,7 @@ h2{
 	font-size: 2vh;
 	border-radius:2vh;
 	background:#66e0ff;
-	color;#000000
+	color:#000000;
 	border:#66e0ff;
 	outline:none;
 	horizontal-align:right;
