--- a/main.css
+++ b/main.css
@@ -183,8 +183,13 @@ h2{
 }
 
 #projectinfo >ul >li >button{
+	margin-right:0%;
+	padding-right:0%;
 	background:#66e0ff;
 	font-size: 2vh;
 	border-radius:2vh;
+	border:none;
+	font-style:italic;
 	font-size:2vh;
 }
+
