--- a/main.css
+++ b/main.css
@@ -169,6 +169,7 @@ h2{
 #projectinfo>ul>li{
 	margin:0%;
 	padding:0%;
+	width:72%;
 	margin-bottom:10%;
 	horizontal-align:left;
 }
@@ -187,7 +188,7 @@ h2{
 	padding-right:0%;
 	background:#66e0ff;
 	font-size: 2vh;
-	border-radius:2vh;
+	border-radius:1vh;
 	border:none;
 	font-style:italic;
 	font-size:2vh;
