--- a/main.css
+++ b/main.css
@@ -180,7 +180,7 @@ h2{
 #projectinfo >ul >li >img{
 	max-width: 10%;
 	border:0.8vh solid #66e0ff;	
-	float: left;
+	float: right;
 }
 
 #projectinfo >ul >li >button{
